# hehe

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/hehe-agent/: Cargo.toml
crates/hehe-agent/src/: agent.rs  config.rs  error.rs  event.rs  executor.rs  lib.rs  response.rs  session.rs
crates/hehe-cli/: Cargo.toml
crates/hehe-cli/src/: main.rs
crates/hehe-cli/src/commands/: chat.rs  mod.rs  run.rs  serve.rs
crates/hehe-core/: Cargo.toml
crates/hehe-core/src/: error.rs  lib.rs  version.rs
crates/hehe-core/src/capability/: mod.rs
crates/hehe-core/src/config/: loader.rs  types.rs
crates/hehe-core/src/context/: mod.rs
crates/hehe-core/src/event/: mod.rs
crates/hehe-core/src/message/: content.rs  message.rs  mod.rs  role.rs
crates/hehe-core/src/resource/: mod.rs
crates/hehe-core/src/stream/: mod.rs
crates/hehe-core/src/tool/: call.rs  mod.rs  schema.rs
crates/hehe-core/src/traits/: mod.rs
crates/hehe-core/src/types/: id.rs  metadata.rs  mod.rs  timestamp.rs
crates/hehe-core/src/utils/: encoding.rs  hash.rs  mod.rs
crates/hehe-llm/: Cargo.toml
crates/hehe-llm/src/: error.rs  lib.rs
crates/hehe-llm/src/providers/: mod.rs  openai.rs
crates/hehe-llm/src/traits/: embedding.rs  mod.rs  provider.rs
crates/hehe-llm/src/types/: mod.rs  request.rs  response.rs
crates/hehe-server/: Cargo.toml
crates/hehe-server/src/: config.rs  error.rs  lib.rs  server.rs  state.rs
crates/hehe-server/src/routes/: chat.rs  health.rs  mod.rs
crates/hehe-store/: Cargo.toml
crates/hehe-store/src/: error.rs  lib.rs  router.rs
crates/hehe-store/src/local/: fts.rs  memory_cache.rs  memory_vector.rs  mod.rs  sqlite.rs
crates/hehe-store/src/traits/: cache.rs  mod.rs  relational.rs  search.rs  vector.rs
crates/hehe-tools/: Cargo.toml
crates/hehe-tools/src/: error.rs  executor.rs  lib.rs  registry.rs
crates/hehe-tools/src/builtin/: filesystem.rs  http.rs  mod.rs  shell.rs  system.rs
crates/hehe-tools/src/sandbox/: mod.rs  native.rs
crates/hehe-tools/src/traits/: mod.rs  tool.rs
examples/: basic_chat.rs  custom_tool.rs  http_server.rs  streaming.rs  with_tools.rs
