[package]
name = "hehe-core"
description = "Core types, traits and utilities for hehe AI Agent framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/hehe-core"
keywords = ["ai", "agent", "llm"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
url.workspace = true
camino.workspace = true
shellexpand.workspace = true
tracing.workspace = true
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
