[package]
name = "hehe-llm"
description = "Unified LLM provider abstraction for hehe AI Agent framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/hehe-llm"
keywords = ["ai", "llm", "openai", "chatgpt"]
categories = ["api-bindings"]

[features]
default = ["openai", "anthropic"]

openai = []
anthropic = []
deepseek = ["openai"]
qwen = ["openai"]
moonshot = ["openai"]
ollama = ["openai"]
google = []
litellm = ["openai"]

full = ["openai", "anthropic", "deepseek", "qwen", "moonshot", "ollama", "google"]

[dependencies]
hehe-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
pin-project-lite = "0.2"
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
