[package]
name = "hehe-server"
description = "HTTP/WebSocket server for hehe AI Agent framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/hehe-server"
keywords = ["ai", "agent", "http", "api", "sse"]
categories = ["web-programming::http-server"]

[features]
default = []

[dependencies]
hehe-core.workspace = true
hehe-agent.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio = { workspace = true, features = ["sync", "signal"] }
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
async-trait.workspace = true
hehe-llm.workspace = true
